<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="25dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_landingheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/landingheader"
                android:textColor="@color/black"
                android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="65dp">

            <TextView
                android:id="@+id/txt_bidderlookup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/bidderlookup"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_searchhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textStyle="italic"
                android:text="@string/searchhint"
                android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_landingsearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:background="@drawable/search_box"
                    android:drawableLeft="@mipmap/search"
                    android:layout_weight="0.99"
                    android:hint="@string/searchtext"
                    android:textColorHint="#cccccc"
                    android:paddingLeft="5dp" />

                <TextView
                    android:id="@+id/txt_searchbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/searchenter"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_addbidder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_addbidder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@mipmap/add" />

                <TextView
                    android:id="@+id/txt_addabidder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/addbidder"
                    android:textSize="25sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|left"
                android:layout_marginTop="0100dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@mipmap/logout" />

                <TextView
                    android:id="@+id/txt_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/logouttxt"
                    android:textSize="25sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</LinearLayout>